# Controller

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  FAQ.md  INSTALLATION.md
src/: server.py
src/client/: index.html
