[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rov-controller"
version = "3.0.0"
description = "A Remote Controller server simulating keyboard inputs from mobile devices"
readme = "README.md"
authors = [
    { name = "Aryan", email = "aryan@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Games/Entertainment"
]
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0",
    "pyautogui>=0.9.54",
    "qrcode>=7.4.2",
    "pillow>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/aryan/Controller"
Bug-Tracker = "https://github.com/aryan/Controller/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
